# hackathon-reportable-pub

./: .gitignore  LICENSE  README.md  api_request_example.ipynb  pyproject.toml
src/utils/: paths.py
web/backend/docker/: docker-compose.yml
web/backend/reportable-app/migrations/: env.py
web/backend/reportable-app/reportable_app/: bootstrap.py  exceptions.py  main.py  router.py
web/backend/reportable-app/shared/: enums.py  exceptions.py  models.py
web/frontend/reportable-app/: index.html  package.json
web/frontend/reportable-app/src/: App.jsx  (+1 more)
web/production/: docker-compose.yml
web/production/backend/reportable-app/: .gitignore  pyproject.toml  run.sh
web/production/backend/reportable-app/data/: prompts.json  schema.json
web/production/backend/reportable-app/reportable_app/: settings.py
web/production/backend/reportable-app/reportable_app/apps/file_analysis/: models.py  schemas.py
web/production/backend/reportable-app/reportable_app/apps/file_analysis/services/: file_analizator.py
web/production/backend/reportable-app/reportable_app/apps/files/: models.py  router.py
web/production/backend/reportable-app/reportable_app/apps/files/repositories/: files.py
web/production/backend/reportable-app/reportable_app/apps/files/use_cases/: get.py
web/production/backend/reportable-app/reportable_app/core/clients/: s3_client.py
web/production/backend/reportable-app/shared/: depends.py
web/production/backend/reportable-app/shared/schemas/: auth.py  captcha.py  errors.py  files.py
web/production/backend/reportable-app/shared/services/: tokens_utils.py
(+46 files in other folders)
